--- a/app/views/bas/tenant_list.html
+++ b/app/views/bas/tenant_list.html
@@ -50,7 +50,7 @@
             </div>
             <div class="col-xs-3 control-value">
                 <div class="checkbox-custom checkbox-primary" style="height:28px;">
-                    <input type="checkbox" ng-model="form.is_enable" id="tenant_chk_01">
+                    <input type="checkbox" ng-model="form.is_enabled" ng-true-value="-1" ng-false-value="0" id="tenant_chk_01" >
                     <label style="top:-4px;" for="tenant_chk_01"></label>
                 </div>
             </div>
@@ -72,7 +72,7 @@
 <div dhtmlxgrid="grid"
      url='tenant'
      params="form"
-     fields='tenant_id|tenant_id,tenant_name,charge_person,tel,mobile,addr,is_enable,memo'
+     fields='tenant_id|tenant_id,tenant_name,charge_person,tel,mobile,addr,is_enabled,memo'
      header1='商户编码, 商户名称, 责任人, 电话, 手机, 地址, 是否启用, 备注'
      colwidth='70,180,60,80,100,260,70,*'
      colalign='left,left,left,left,left,left,center'
